--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     background: no-repeat center center scroll;
     border-radius: 15px;
     /*  terminaciones circular */
-    -webkit-background-size: cover;
+    -webkit-background-size: cover;  /*Propiedad para que la imagen ocupe todo el contenedor*/
 
 }
 
@@ -97,7 +97,7 @@
 .card-img-top {
     height: 15vw;
     background-position: center;
-    object-fit: cover;
+    object-fit: cover; /* propiedad para ajustar el contenido para que ocupe el espacio disponible*/
     width: 90%;
 }
 
@@ -106,11 +106,16 @@
     color: #6f519c;
 }
 
+/* media query permite aplicar estilos si se cumplen ciertas condiciones, no esta diciedo que cuando tenga un ancho maximo de 768 px aplica esta estilo  */
 @media (max-width :768px) {
     .card-img-top {
         height: 50vh;
     }
-}
+} 
+
+/* max-width : propiedad que significa hasta este ancho como maximo
+  min-width : propiedad que significa : desde este ancho en adelante 
+*/
 
 
 
@@ -119,5 +124,5 @@
 iframe {
     width: 80%;
     height: auto;
-aspect-ratio: 16/9;
+aspect-ratio: 16/9;  /* propiedad para mantener la prporcion en pantalla */
 }
