--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
 }
 
 
+.fondo-opaco {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    /* mejor que 100vh */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .title {
     text-align: center;
@@ -125,4 +134,68 @@ iframe {
     width: 80%;
     height: auto;
 aspect-ratio: 16/9;  /* propiedad para mantener la prporcion en pantalla */
+padding-bottom: 20px;
+}
+
+
+/* seccion contacto/formulario */
+
+#contacto {
+    height: auto;
+    background-color: #6d3f7b;
+}
+
+.form {
+    max-width: 600px;
+    width: 100%;
+    background-color: #0893ff;
+    border-radius: 30px;
+    padding: 30px;
+    margin-top: 50px;
+    margin: auto;
+    margin-bottom: 15px;
+    margin-top: 15px;
+
+}
+
+.texto-formulario{
+    font-size: 25px;
+    margin-bottom: 15px;
+    text-align: center;
+    color: white;
+}
+
+input{
+    width: 100%;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+textarea{
+    width: 100%;
+        padding: 5px;
+        border-radius: 10px;
+        font-size: 15px;
+}
+
+.boton {
+    height: 50px;
+    width: 100%;
+    border-radius: 10px;
+    font-size: 15px;
+    background-color: #6f519c;
+    box-shadow: 1px 2px 2px black;
+    border: 1px white;
+}
+
+.boton:hover{
+    background-color: white;
+}
+
+.img-form {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+
 }
